cmake_minimum_required(VERSION 3.31)
project(Map_builder_for_rpg_game)

set(CMAKE_CXX_STANDARD 14)

add_executable(Map_builder_for_rpg_game
        .angular/cache/14.2.3/angular-webpack/05b6f66173cd08758901027403ee2f662aa4ef5e/0.pack
        .angular/cache/14.2.3/angular-webpack/05b6f66173cd08758901027403ee2f662aa4ef5e/1.pack
        .angular/cache/14.2.3/angular-webpack/05b6f66173cd08758901027403ee2f662aa4ef5e/10.pack
        .angular/cache/14.2.3/angular-webpack/05b6f66173cd08758901027403ee2f662aa4ef5e/11.pack
        .angular/cache/14.2.3/angular-webpack/05b6f66173cd08758901027403ee2f662aa4ef5e/12.pack
        .angular/cache/14.2.3/angular-webpack/05b6f66173cd08758901027403ee2f662aa4ef5e/2.pack
        .angular/cache/14.2.3/angular-webpack/05b6f66173cd08758901027403ee2f662aa4ef5e/3.pack
        .angular/cache/14.2.3/angular-webpack/05b6f66173cd08758901027403ee2f662aa4ef5e/4.pack
        .angular/cache/14.2.3/angular-webpack/05b6f66173cd08758901027403ee2f662aa4ef5e/5.pack
        .angular/cache/14.2.3/angular-webpack/05b6f66173cd08758901027403ee2f662aa4ef5e/6.pack
        .angular/cache/14.2.3/angular-webpack/05b6f66173cd08758901027403ee2f662aa4ef5e/7.pack
        .angular/cache/14.2.3/angular-webpack/05b6f66173cd08758901027403ee2f662aa4ef5e/8.pack
        .angular/cache/14.2.3/angular-webpack/05b6f66173cd08758901027403ee2f662aa4ef5e/9.pack
        .angular/cache/14.2.3/angular-webpack/05b6f66173cd08758901027403ee2f662aa4ef5e/index.pack
        .angular/cache/14.2.3/angular-webpack/05b6f66173cd08758901027403ee2f662aa4ef5e/index.pack.old
        .angular/cache/14.2.3/angular-webpack/4100b2c17f12e45be6f6c16e49eec7402091794e/0.pack
        .angular/cache/14.2.3/angular-webpack/4100b2c17f12e45be6f6c16e49eec7402091794e/index.pack
        .angular/cache/14.2.3/angular-webpack/bc0c5373a55784f5130290f3c612629f407440b8/0.pack
        .angular/cache/14.2.3/angular-webpack/bc0c5373a55784f5130290f3c612629f407440b8/1.pack
        .angular/cache/14.2.3/angular-webpack/bc0c5373a55784f5130290f3c612629f407440b8/2.pack
        .angular/cache/14.2.3/angular-webpack/bc0c5373a55784f5130290f3c612629f407440b8/index.pack
        .angular/cache/14.2.3/angular-webpack/bc0c5373a55784f5130290f3c612629f407440b8/index.pack.old
        .angular/cache/14.2.3/angular-webpack/c4b650b7cb1be748a1b7038e73ddf33e0371c818/0.pack
        .angular/cache/14.2.3/angular-webpack/c4b650b7cb1be748a1b7038e73ddf33e0371c818/1.pack
        .angular/cache/14.2.3/angular-webpack/c4b650b7cb1be748a1b7038e73ddf33e0371c818/2.pack
        .angular/cache/14.2.3/angular-webpack/c4b650b7cb1be748a1b7038e73ddf33e0371c818/3.pack
        .angular/cache/14.2.3/angular-webpack/c4b650b7cb1be748a1b7038e73ddf33e0371c818/4.pack
        .angular/cache/14.2.3/angular-webpack/c4b650b7cb1be748a1b7038e73ddf33e0371c818/5.pack
        .angular/cache/14.2.3/angular-webpack/c4b650b7cb1be748a1b7038e73ddf33e0371c818/index.pack
        .angular/cache/14.2.3/angular-webpack/c4b650b7cb1be748a1b7038e73ddf33e0371c818/index.pack.old
        .angular/cache/14.2.3/angular-webpack/f46a85dfbab19ca1a3ee7905c3b023d39fb4a70f/0.pack
        .angular/cache/14.2.3/angular-webpack/f46a85dfbab19ca1a3ee7905c3b023d39fb4a70f/1.pack
        .angular/cache/14.2.3/angular-webpack/f46a85dfbab19ca1a3ee7905c3b023d39fb4a70f/2.pack
        .angular/cache/14.2.3/angular-webpack/f46a85dfbab19ca1a3ee7905c3b023d39fb4a70f/index.pack
        .angular/cache/14.2.3/angular-webpack/f46a85dfbab19ca1a3ee7905c3b023d39fb4a70f/index.pack.old
        .angular/cache/14.2.3/babel-webpack/011c146cd2eb0a32d3b2458b94bf6349.json
        .angular/cache/14.2.3/babel-webpack/025f133f88cd615c7fbe9aa034b0aab8.json
        .angular/cache/14.2.3/babel-webpack/03357e47b40b355a424b9424c0b71f15.json
        .angular/cache/14.2.3/babel-webpack/04aadd1fe1b6153edb354820f0eb873b.json
        .angular/cache/14.2.3/babel-webpack/05b32d4ef651196ecc886520575b6c75.json
        .angular/cache/14.2.3/babel-webpack/086c5dc010b278d6104b2a2810d82f4e.json
        .angular/cache/14.2.3/babel-webpack/09091d6e76b3bbacbb221d6578ed8ff1.json
        .angular/cache/14.2.3/babel-webpack/092a806d78ed33d81e97f3d9284f1227.json
        .angular/cache/14.2.3/babel-webpack/0b3160b033284262e995747abfaad777.json
        .angular/cache/14.2.3/babel-webpack/0b642db5ce50543dd6fccf9c818c5f5d.json
        .angular/cache/14.2.3/babel-webpack/0de5dc2802b309cd74d71939293fe27d.json
        .angular/cache/14.2.3/babel-webpack/0e669863a1c72032c6921f23a3fbde04.json
        .angular/cache/14.2.3/babel-webpack/11f02955b0679cdf3ec4fdc95a4d1b6f.json
        .angular/cache/14.2.3/babel-webpack/1258ae751615980b4e3093c7f5e7164f.json
        .angular/cache/14.2.3/babel-webpack/126c148d0dccd9b55f6b04370fb8ad93.json
        .angular/cache/14.2.3/babel-webpack/152b6a7026b52b48f17d6c08b07c51e9.json
        .angular/cache/14.2.3/babel-webpack/164b5ce6a22b8af3a232c71730f1c1c1.json
        .angular/cache/14.2.3/babel-webpack/16983c6efb9a930ada9c16ef4679eafb.json
        .angular/cache/14.2.3/babel-webpack/19917f280127f136409c865bd34f91cb.json
        .angular/cache/14.2.3/babel-webpack/1ddbba88f67303762e3038255f2a680e.json
        .angular/cache/14.2.3/babel-webpack/1e26fa2dd9db335a555f693361b7f95a.json
        .angular/cache/14.2.3/babel-webpack/1e3ad1a6d028360cecb6092cf11c37a2.json
        .angular/cache/14.2.3/babel-webpack/204b3bc4b3f92a87e87f324fd04a2342.json
        .angular/cache/14.2.3/babel-webpack/204f13bcd1b7945e71db444f422ac171.json
        .angular/cache/14.2.3/babel-webpack/20da7f6f8f189896dde18984cd9eceab.json
        .angular/cache/14.2.3/babel-webpack/2100e645ebd099e7e2c510def8a63c4e.json
        .angular/cache/14.2.3/babel-webpack/218b40c17c8b51200ae24e890e940170.json
        .angular/cache/14.2.3/babel-webpack/221f1a213214c8c9bdba898c53e801d8.json
        .angular/cache/14.2.3/babel-webpack/22f6577d065580f6b4ec05ff5d9f9370.json
        .angular/cache/14.2.3/babel-webpack/24069f7b75b45523202a226667ef8534.json
        .angular/cache/14.2.3/babel-webpack/26fd8488fa62bdf33de51ca5f51e4585.json
        .angular/cache/14.2.3/babel-webpack/2719e92036d54af1f640c72fb691266b.json
        .angular/cache/14.2.3/babel-webpack/273b65529f818105698dfad9b024bb13.json
        .angular/cache/14.2.3/babel-webpack/27c313fe3197551232d45f133c368117.json
        .angular/cache/14.2.3/babel-webpack/27e28a27ccd8233474ae3a6a2674187d.json
        .angular/cache/14.2.3/babel-webpack/2a04ad631bb4f436788033864fb724bc.json
        .angular/cache/14.2.3/babel-webpack/2b4ad7aacd13c2900c3c6e9a6887d029.json
        .angular/cache/14.2.3/babel-webpack/2bdb96ecd7b68eab168c7bcf423b6cf9.json
        .angular/cache/14.2.3/babel-webpack/2d62bb4820bcaf472f961c0c8d395495.json
        .angular/cache/14.2.3/babel-webpack/2d6e7fc27f60cfb9b434d80789956d5f.json
        .angular/cache/14.2.3/babel-webpack/2df510fb994c265adc1320d24aeec28a.json
        .angular/cache/14.2.3/babel-webpack/2e39f1b084b7f9c55a8a6bc14e7c1345.json
        .angular/cache/14.2.3/babel-webpack/2e900d2b85f65070d4295e69aff0adf9.json
        .angular/cache/14.2.3/babel-webpack/2ee4d024918854721676ab55a2d26478.json
        .angular/cache/14.2.3/babel-webpack/2f8dc9d40ea786a5b6f8bd45459198ee.json
        .angular/cache/14.2.3/babel-webpack/3069f4bf717fbf4114a503da934381f5.json
        .angular/cache/14.2.3/babel-webpack/30b53cffffe263540cfa5fdbda6fdd0f.json
        .angular/cache/14.2.3/babel-webpack/314891463142625b1cd3a997b91182d7.json
        .angular/cache/14.2.3/babel-webpack/319f3a7c57f12f23547e42ae335e2895.json
        .angular/cache/14.2.3/babel-webpack/339e24bcbcb4d5dbbe7c11b1a6397335.json
        .angular/cache/14.2.3/babel-webpack/36413d4ba22fe65046aac90a2ce58695.json
        .angular/cache/14.2.3/babel-webpack/36c0306cdd1b1653e53aae356714f5a9.json
        .angular/cache/14.2.3/babel-webpack/36fab24c9192c979806f9f725ff4ac33.json
        .angular/cache/14.2.3/babel-webpack/39b86605cc073a8951feeb265591d861.json
        .angular/cache/14.2.3/babel-webpack/3aadb750b5cb0c77637cadc5ab8a974e.json
        .angular/cache/14.2.3/babel-webpack/3b766ec5f56c072a1b068d7dfcdb873e.json
        .angular/cache/14.2.3/babel-webpack/3c2c977fd7c835d46e3a1fbf2094629a.json
        .angular/cache/14.2.3/babel-webpack/3cae70e9b1c56fa26a6bfe1c84a550f5.json
        .angular/cache/14.2.3/babel-webpack/3d6460b75a29c5cad21701e98acb2f53.json
        .angular/cache/14.2.3/babel-webpack/3d8f17fe61a4325d5fcdc6382074a29f.json
        .angular/cache/14.2.3/babel-webpack/3f44dda03758c3af95fa3dbce905cf6e.json
        .angular/cache/14.2.3/babel-webpack/4153caa642019da1c03099f37e6eebac.json
        .angular/cache/14.2.3/babel-webpack/41ee3026591abb482094f83aa8f8df3a.json
        .angular/cache/14.2.3/babel-webpack/42ab81f87ff82bae0cfef5ec583245b9.json
        .angular/cache/14.2.3/babel-webpack/42d40b9278e3b03b2e72da205dab95ca.json
        .angular/cache/14.2.3/babel-webpack/4384f4948da0440dbebd2769e5a57f2b.json
        .angular/cache/14.2.3/babel-webpack/442229ed4d38100a252b4bef85312d1c.json
        .angular/cache/14.2.3/babel-webpack/464276e8a067a3b5e53381762153079f.json
        .angular/cache/14.2.3/babel-webpack/47d658f5749412d76181d1be0a430dda.json
        .angular/cache/14.2.3/babel-webpack/47fb8e28034a3998b5882a274bc2fa79.json
        .angular/cache/14.2.3/babel-webpack/4b1be1ea90f95959fee8817045845386.json
        .angular/cache/14.2.3/babel-webpack/4b5dfae2cfc3ca4a7d02e4108ae02456.json
        .angular/cache/14.2.3/babel-webpack/4c1399c89a665510ae347e6701f6f8ee.json
        .angular/cache/14.2.3/babel-webpack/4fdb4c92848ef5612275083c575df4c1.json
        .angular/cache/14.2.3/babel-webpack/50d72453ebd09936dcf68248dc00b5f0.json
        .angular/cache/14.2.3/babel-webpack/513bd9c31648dc31f88c1db5d43ebeef.json
        .angular/cache/14.2.3/babel-webpack/5257f8e74496bc05cefc63957b54a35e.json
        .angular/cache/14.2.3/babel-webpack/533618f46ac2cd842a99677cfe59238e.json
        .angular/cache/14.2.3/babel-webpack/540553ff50f4cf6f6357a6acbc483b96.json
        .angular/cache/14.2.3/babel-webpack/546172ff7752830d51a2fc95026dbe63.json
        .angular/cache/14.2.3/babel-webpack/54f2cc0d6ae19c43098a2a9be08a39ab.json
        .angular/cache/14.2.3/babel-webpack/576a93d751beb5cf9161ea55be9a5c28.json
        .angular/cache/14.2.3/babel-webpack/592c3426e1405b7a21d34e7edf622c6f.json
        .angular/cache/14.2.3/babel-webpack/59ec6113931f5c6b26130fd35c442d05.json
        .angular/cache/14.2.3/babel-webpack/5b3d0cba47ebee8aeae3b44509eda332.json
        .angular/cache/14.2.3/babel-webpack/5c39eddec69babda27101cb67d99bb8c.json
        .angular/cache/14.2.3/babel-webpack/5c65beb8d47dcfe8141981bc40be0199.json
        .angular/cache/14.2.3/babel-webpack/5d672cd427171f0d123777e7650842b3.json
        .angular/cache/14.2.3/babel-webpack/5f731820d46435c76562567b84930822.json
        .angular/cache/14.2.3/babel-webpack/6125d4e446439a90072eef85edf31cb8.json
        .angular/cache/14.2.3/babel-webpack/62604dfe3684d49935e44680ed1172d0.json
        .angular/cache/14.2.3/babel-webpack/62ae2fa52976152a33287479ba7ee16f.json
        .angular/cache/14.2.3/babel-webpack/6454f804ca6852c472ee96a8198376c9.json
        .angular/cache/14.2.3/babel-webpack/64982655a7f195725d7c90e176b7d991.json
        .angular/cache/14.2.3/babel-webpack/67412dbf44c3235ea27333bf5d69c7d9.json
        .angular/cache/14.2.3/babel-webpack/675e9710f87b10259aee940262e89db7.json
        .angular/cache/14.2.3/babel-webpack/67ef075ebf9b269194cbd24c87dddc8f.json
        .angular/cache/14.2.3/babel-webpack/689c014dd245d12d19d10c1bcbc8c6ce.json
        .angular/cache/14.2.3/babel-webpack/6f2ad5b9bcff14527ccce7aecba8e316.json
        .angular/cache/14.2.3/babel-webpack/6f3e74d6b01691a2ee5862bf4aee8b2b.json
        .angular/cache/14.2.3/babel-webpack/6f6e26514594c48a26b4c991d4ef538f.json
        .angular/cache/14.2.3/babel-webpack/6fb48dce493e2faafa5cecc4cc872713.json
        .angular/cache/14.2.3/babel-webpack/6fb99b4ee866a653ee21a0a6976cbb2d.json
        .angular/cache/14.2.3/babel-webpack/6fe2869d0f359df17269670b12d46f20.json
        .angular/cache/14.2.3/babel-webpack/70b262fa9b1a1ed79d4bf981174c1ede.json
        .angular/cache/14.2.3/babel-webpack/7135aa9c30df7046f998ace2ea320543.json
        .angular/cache/14.2.3/babel-webpack/713f0abd2889084b1ec890bf91fc2691.json
        .angular/cache/14.2.3/babel-webpack/71544ddb0e25983cdc2ab338dcfade49.json
        .angular/cache/14.2.3/babel-webpack/724f5bf6b135bb6e65d9e92f855f4e95.json
        .angular/cache/14.2.3/babel-webpack/758fa5c2dbfc8e80a14dbf9e33134cd7.json
        .angular/cache/14.2.3/babel-webpack/75b74e09c0648673a1999843fcb9eca3.json
        .angular/cache/14.2.3/babel-webpack/766712fa6e2842a70c6362eb0f19e20c.json
        .angular/cache/14.2.3/babel-webpack/771874d76b03b474a6009dcdae76903a.json
        .angular/cache/14.2.3/babel-webpack/7814b6ef96a79924b94407d14092a4e4.json
        .angular/cache/14.2.3/babel-webpack/7a9cbe5edcc59810b7c79b911119ed23.json
        .angular/cache/14.2.3/babel-webpack/7bd8971072ab1e7cec736fd4d0ec69e1.json
        .angular/cache/14.2.3/babel-webpack/7c2ccd034d92519b833769199c874c67.json
        .angular/cache/14.2.3/babel-webpack/7cbd0cdb5d12134f5cc75d068009acea.json
        .angular/cache/14.2.3/babel-webpack/7cec7a290af3a2ce673e7ff07ee01724.json
        .angular/cache/14.2.3/babel-webpack/7d62bc218c17802dcc530041da7419b4.json
        .angular/cache/14.2.3/babel-webpack/7d6f66ed0320fd64831608691ae9a450.json
        .angular/cache/14.2.3/babel-webpack/81e9f41f7877f83949f8f38c553ba95b.json
        .angular/cache/14.2.3/babel-webpack/83e929f650e7218bc625c1bfe886980b.json
        .angular/cache/14.2.3/babel-webpack/849ffc18395a70b5f50fd480bda021c9.json
        .angular/cache/14.2.3/babel-webpack/875cd24b6ae649bb6b44860b443e578b.json
        .angular/cache/14.2.3/babel-webpack/884ecbc59c07c556402c73538fc237a9.json
        .angular/cache/14.2.3/babel-webpack/88f66c2e859bf73a4bd3456765356913.json
        .angular/cache/14.2.3/babel-webpack/89b1e22a21a6630d8180555d855d2630.json
        .angular/cache/14.2.3/babel-webpack/8a1f7b6fe4d8d5b079135e7c41e42750.json
        .angular/cache/14.2.3/babel-webpack/8ccf25582b2c5863b252da8abf33b706.json
        .angular/cache/14.2.3/babel-webpack/8d030a3c4c531ef90acd0bf7699fe1f0.json
        .angular/cache/14.2.3/babel-webpack/8ddb97d5bbbab90ebcc3645b4ecc1de0.json
        .angular/cache/14.2.3/babel-webpack/8e1e00a21edbd1966cbd91d78825eb12.json
        .angular/cache/14.2.3/babel-webpack/8e5a7afaf1b9b23cf42693291793fd5b.json
        .angular/cache/14.2.3/babel-webpack/8f00eee3abfe1b13c69cde9ae7a61c86.json
        .angular/cache/14.2.3/babel-webpack/8f1be6708e7cbd690cde624c7d9abea1.json
        .angular/cache/14.2.3/babel-webpack/90d4659e6dd35b94dff78794f4f48b58.json
        .angular/cache/14.2.3/babel-webpack/9212a985802cc2c54c0a5fac10cbdc19.json
        .angular/cache/14.2.3/babel-webpack/929db3e8cbe49416e9bd9e011ecd124c.json
        .angular/cache/14.2.3/babel-webpack/92de9046df2b5b30b697c505f36e32d3.json
        .angular/cache/14.2.3/babel-webpack/93c1ae09504e28eccd2c0beef486379a.json
        .angular/cache/14.2.3/babel-webpack/93f7fd969f5482e768f564e4d337f099.json
        .angular/cache/14.2.3/babel-webpack/9422e6fce2d25e3b041c0e734f72fd76.json
        .angular/cache/14.2.3/babel-webpack/9604903b93ccf8ad24fac596a6fc6ffd.json
        .angular/cache/14.2.3/babel-webpack/96c36892ba4062335f0fd767346e6ff2.json
        .angular/cache/14.2.3/babel-webpack/9715b30cc1a16f7c33f24f2bd3829c01.json
        .angular/cache/14.2.3/babel-webpack/981f3a459e297fe7dde9cdac5238bc9f.json
        .angular/cache/14.2.3/babel-webpack/999d60175efef0bd6cc59d7e563f2f01.json
        .angular/cache/14.2.3/babel-webpack/9a2dbb30defaacd65a9b4eecfb4c484b.json
        .angular/cache/14.2.3/babel-webpack/9a5566b677aa451b190af5b47dc5f7dd.json
        .angular/cache/14.2.3/babel-webpack/9a5e538413d992a62e0334fbdbef7614.json
        .angular/cache/14.2.3/babel-webpack/9b0105739e6b2531aa8134d9db4654d7.json
        .angular/cache/14.2.3/babel-webpack/9b2e8e2c381a0c3ac34adc66762c9061.json
        .angular/cache/14.2.3/babel-webpack/9c91d0d5162eb969ba7b29e4c87315f1.json
        .angular/cache/14.2.3/babel-webpack/9ce31702b18a797ba584c596b2af48ef.json
        .angular/cache/14.2.3/babel-webpack/9dfcb85ac8d5014058328efaeba1f08b.json
        .angular/cache/14.2.3/babel-webpack/a372548ba9bd8096b15daffbafe50b47.json
        .angular/cache/14.2.3/babel-webpack/a3f1f20876fb306034971ae446696ced.json
        .angular/cache/14.2.3/babel-webpack/a4001af053811fe11019b3a59839a4e5.json
        .angular/cache/14.2.3/babel-webpack/a4689ea1c85eb6429416a918990e96c9.json
        .angular/cache/14.2.3/babel-webpack/a49d33868618f43ee5469f09f097c84e.json
        .angular/cache/14.2.3/babel-webpack/a4a86ddfd6eaec97d3eace349730879e.json
        .angular/cache/14.2.3/babel-webpack/a4ec59eda4730591c5caec3cca785d95.json
        .angular/cache/14.2.3/babel-webpack/a58d3579157fd0f8401e467dd25d29c7.json
        .angular/cache/14.2.3/babel-webpack/a64fd698065cf4dae3247ac6f8e63117.json
        .angular/cache/14.2.3/babel-webpack/a6cd7f794ed4597886c5082a10afe7d6.json
        .angular/cache/14.2.3/babel-webpack/a6f8b130a7ae94940afbbc91143a5293.json
        .angular/cache/14.2.3/babel-webpack/a8068d973a3f10a5b634b688088765df.json
        .angular/cache/14.2.3/babel-webpack/a89a71ff6133782935ac4bf862fec56b.json
        .angular/cache/14.2.3/babel-webpack/a93dfa96179aafe557dcc503143e3f7c.json
        .angular/cache/14.2.3/babel-webpack/a99ce0ad8e45025539cead963547421e.json
        .angular/cache/14.2.3/babel-webpack/aaadb4cf19e26243c49b928c8981b971.json
        .angular/cache/14.2.3/babel-webpack/acbcd8ddd87f7a6630a2ad2b5b815d9c.json
        .angular/cache/14.2.3/babel-webpack/ace4e96687c9fb0e47dfe57f5739a1b2.json
        .angular/cache/14.2.3/babel-webpack/af87e14d2b7d46eb0f12d3132737bcbc.json
        .angular/cache/14.2.3/babel-webpack/afb2fe341d1c3eb49df41787fe3115aa.json
        .angular/cache/14.2.3/babel-webpack/b1af20ab7d11d7169bc00a69d4dfcd1b.json
        .angular/cache/14.2.3/babel-webpack/b22d9fd04c78302097f5e1b13d1f52d5.json
        .angular/cache/14.2.3/babel-webpack/b2fc21cbd91645761b5d74bebc6fce27.json
        .angular/cache/14.2.3/babel-webpack/b2fdd8688e0ec7e16b9779dea5534b7b.json
        .angular/cache/14.2.3/babel-webpack/b4ddd79190074cae915f5c8b7a0e46cb.json
        .angular/cache/14.2.3/babel-webpack/b571251b583fc88266148fcb9d220a83.json
        .angular/cache/14.2.3/babel-webpack/b62e57c691b06ce57ca44f76cd217d30.json
        .angular/cache/14.2.3/babel-webpack/b939738367eb482625c3ebb19c46eb54.json
        .angular/cache/14.2.3/babel-webpack/b952cf8ccc989bc18cd4ba6ed3c47273.json
        .angular/cache/14.2.3/babel-webpack/b9b0012e92a8430eafbd4697f6979310.json
        .angular/cache/14.2.3/babel-webpack/bb2d3bbdd7df0f2759da65de9ab68423.json
        .angular/cache/14.2.3/babel-webpack/bb5f0c7434190941624bb01b743fe220.json
        .angular/cache/14.2.3/babel-webpack/c11e035eed86ad414071e14163f762eb.json
        .angular/cache/14.2.3/babel-webpack/c2f6d33e4dc48d3aa79f8f054ea66694.json
        .angular/cache/14.2.3/babel-webpack/c654498accb3a4d173fb268161af3346.json
        .angular/cache/14.2.3/babel-webpack/c6986a9a3ecde70360eaae66fc85ffb3.json
        .angular/cache/14.2.3/babel-webpack/c817fafcbf534b2c399a82abccf516de.json
        .angular/cache/14.2.3/babel-webpack/c890a1a110b16cc3fd18c44aeb23598e.json
        .angular/cache/14.2.3/babel-webpack/c8b325502345c0d7fbd72b16665cbdb2.json
        .angular/cache/14.2.3/babel-webpack/caf7e4b843b144c17395332884290563.json
        .angular/cache/14.2.3/babel-webpack/cb4ab720b2e8e1f1a963b4b7d64f4df4.json
        .angular/cache/14.2.3/babel-webpack/cbb44c19ad246ece908b772b3369e090.json
        .angular/cache/14.2.3/babel-webpack/cd45b424367df7fabe9047b62651fe70.json
        .angular/cache/14.2.3/babel-webpack/ce68d06f192f253d44ea5bd2831c8e4c.json
        .angular/cache/14.2.3/babel-webpack/cf706fad933b12119b622234175d9dd2.json
        .angular/cache/14.2.3/babel-webpack/cfc54560f585403b851a2c687309ab39.json
        .angular/cache/14.2.3/babel-webpack/cfe4a718a0b8e01a31e6b538190540a6.json
        .angular/cache/14.2.3/babel-webpack/d0e3107f712ba71875e90f3f9247406e.json
        .angular/cache/14.2.3/babel-webpack/d435a9e3bd9bb44e50a6a4a068f4f4c1.json
        .angular/cache/14.2.3/babel-webpack/d50a46399601d09823d933259616d9b3.json
        .angular/cache/14.2.3/babel-webpack/d54b079f3d41632f53d7cc65d9d6c0c8.json
        .angular/cache/14.2.3/babel-webpack/d559bb1e8af9980a02187c5a9e32e2c8.json
        .angular/cache/14.2.3/babel-webpack/d7f2134d0595094a342f6a203bc6ccb5.json
        .angular/cache/14.2.3/babel-webpack/db4cb484961ae6a4549be01ae4d7bb71.json
        .angular/cache/14.2.3/babel-webpack/dc48ad213d5ddb98f082078ade6063bf.json
        .angular/cache/14.2.3/babel-webpack/de56793ccc9a3718643bee134e997bd1.json
        .angular/cache/14.2.3/babel-webpack/de68a6e62193bf256215301035e7dc40.json
        .angular/cache/14.2.3/babel-webpack/de7acce3ccd681581820a950827bb3ee.json
        .angular/cache/14.2.3/babel-webpack/dfa10febf8af48d9db26811af35a0bc4.json
        .angular/cache/14.2.3/babel-webpack/dfa1247543317c681df831a63bd35236.json
        .angular/cache/14.2.3/babel-webpack/e06a4e908b077bb21243ff51c151e36b.json
        .angular/cache/14.2.3/babel-webpack/e22c1c66babfad39532363dd2ea79585.json
        .angular/cache/14.2.3/babel-webpack/e247b2487ff65acf449bff08fa96114d.json
        .angular/cache/14.2.3/babel-webpack/e397b570c272a5ce7f0b66df78320505.json
        .angular/cache/14.2.3/babel-webpack/e478beb3a7ce15f155b8f2f8033e6f5a.json
        .angular/cache/14.2.3/babel-webpack/e5aec6ffced1eb57951309ef36155bdc.json
        .angular/cache/14.2.3/babel-webpack/e618940fa55b74507301f4533324a5d4.json
        .angular/cache/14.2.3/babel-webpack/e68bb7991c902ac2ce4a3bf54761b118.json
        .angular/cache/14.2.3/babel-webpack/e6fa4cf27d16ff6e0bb0cdce8d82b35a.json
        .angular/cache/14.2.3/babel-webpack/e886a662e527721a2951b3a962d16fb7.json
        .angular/cache/14.2.3/babel-webpack/e94b7eb8fd86eb5a6eef5d43d2775d11.json
        .angular/cache/14.2.3/babel-webpack/eaebbee729a9ff3667b73452c2351509.json
        .angular/cache/14.2.3/babel-webpack/eb912045df16fa0daaa36319e1a49c25.json
        .angular/cache/14.2.3/babel-webpack/eba4cbc9ee89c82bb0b3ed3c2c76661a.json
        .angular/cache/14.2.3/babel-webpack/ebb4275347e8a25bd0903b8a357e4c3c.json
        .angular/cache/14.2.3/babel-webpack/ed70cb2e0f72f926351b185f2a77169a.json
        .angular/cache/14.2.3/babel-webpack/ee1184bc37826f4e9d2b3d7150b25952.json
        .angular/cache/14.2.3/babel-webpack/ee24cc85458742c121dfdd8ab4967e6b.json
        .angular/cache/14.2.3/babel-webpack/f02a4a2d678b0c4d5bf2c07e435cf5f0.json
        .angular/cache/14.2.3/babel-webpack/f1f56234756c232a9b8f7679e47d4d13.json
        .angular/cache/14.2.3/babel-webpack/f2ff02f27fb7f4ff007dca59ba575582.json
        .angular/cache/14.2.3/babel-webpack/f369026f60962a6de304b5847d582783.json
        .angular/cache/14.2.3/babel-webpack/f44ee1d7c5a5486f979e91c5eefcca47.json
        .angular/cache/14.2.3/babel-webpack/f62d28bce7daf18b69543f2cc65d51f1.json
        .angular/cache/14.2.3/babel-webpack/f62dfa591de6e1611d9362ae321c5c05.json
        .angular/cache/14.2.3/babel-webpack/f6ac9d60460f2d2fda04de1a73ad90b6.json
        .angular/cache/14.2.3/babel-webpack/f718b7ec487433b45e3c1b6ee71dceb3.json
        .angular/cache/14.2.3/babel-webpack/f73862d1a4314ac404f744cbce843c98.json
        .angular/cache/14.2.3/babel-webpack/f853491ee10f1ad8e3d52f8634c2c0f3.json
        .angular/cache/14.2.3/babel-webpack/f9166d3dd6e313528b7c194a8a40af67.json
        .angular/cache/14.2.3/babel-webpack/fa46d7c779b202e9944a53c2221c0af3.json
        .angular/cache/14.2.3/babel-webpack/fadbc05e0b2d4adbe7709ed79e299447.json
        .angular/cache/14.2.3/babel-webpack/fc7372c068a76714ec1fd3df6ae323c7.json
        .angular/cache/14.2.3/babel-webpack/fd58c2e476cf861ff133223637764ba9.json
        .angular/cache/14.2.3/babel-webpack/fe5ffe8a75f42d9bf7ac7ac839cb8e55.json
        .angular/cache/14.2.3/babel-webpack/ff987278799bbcc8f0b62056b48bd04e.json
        ".idea/shelf/Uncommitted_changes_before_Update_at_24_04_2023_19_59_[Changes]/287200 — копия.jpg"
        .idea/shelf/Uncommitted_changes_before_Update_at_24_04_2023_19_59_[Changes]/287200.jpg
        .idea/shelf/Uncommitted_changes_before_Update_at_24_04_2023_19_59_[Changes]/camp.png
        .idea/shelf/Uncommitted_changes_before_Update_at_24_04_2023_19_59_[Changes]/capital.png
        .idea/shelf/Uncommitted_changes_before_Update_at_24_04_2023_19_59_[Changes]/city_level_1.png
        .idea/shelf/Uncommitted_changes_before_Update_at_24_04_2023_19_59_[Changes]/city_level_2.png
        .idea/shelf/Uncommitted_changes_before_Update_at_24_04_2023_19_59_[Changes]/city_level_3.png
        .idea/shelf/Uncommitted_changes_before_Update_at_24_04_2023_19_59_[Changes]/city_level_4.png
        .idea/shelf/Uncommitted_changes_before_Update_at_24_04_2023_19_59_[Changes]/city_level_5.png
        .idea/shelf/Uncommitted_changes_before_Update_at_24_04_2023_19_59_[Changes]/criminal_camp.png
        .idea/shelf/Uncommitted_changes_before_Update_at_24_04_2023_19_59_[Changes]/fort1.png
        .idea/shelf/Uncommitted_changes_before_Update_at_24_04_2023_19_59_[Changes]/map-background.jpg
        .idea/shelf/Uncommitted_changes_before_Update_at_24_04_2023_19_59_[Changes]/shelved.patch
        .idea/shelf/Uncommitted_changes_before_Update_at_24_04_2023_19_59_[Changes]/village_level_1.png
        .idea/shelf/Uncommitted_changes_before_Update_at_24_04_2023_19_59_[Changes]/village_level_2.png
        .idea/shelf/Uncommitted_changes_before_Update_at_24_04_2023_19_59_[Changes]/village_level_3.png
        .idea/shelf/Uncommitted_changes_before_Update_at_24_04_2023_19_59_[Changes]/village_level_4.png
        .idea/shelf/Uncommitted_changes_before_Update_at_24_04_2023_19_59_[Changes]/village_level_5.png
        .idea/shelf/Uncommitted_changes_before_Update_at_24_04_2023_19_59_[Changes]/vintage-hand-drawn-tents-icons-bundle-simple-line-art-graphics-camping-houses-symbols-stock-vector-isolated-adventure-elemens-190468685.jpg
        .idea/shelf/Uncommitted_changes_before_Update_at_24_04_2023_19_59__Changes_.xml
        .idea/.gitignore
        .idea/graph_training_0.iml
        .idea/jsLibraryMappings.xml
        .idea/Map-builder-for-rpg-game.iml
        .idea/modules.xml
        .idea/vcs.xml
        .idea/workspace.xml
        fonts/alice-in-wonderland-font/misc/License.txt
        fonts/alice-in-wonderland-font/AliceInWonderland-1GzL0.ttf
        fonts/alice-in-wonderland-font/info.txt
        "images/287200 — копия.jpg"
        images/287200.jpg
        images/345d9724898967.5633bed73d62e.jpg
        images/antique-big.webp
        "images/button background.webp"
        images/camp.png
        images/capital.png
        images/city_level_1.png
        images/city_level_2.png
        images/city_level_3.png
        images/city_level_4.png
        images/city_level_5.png
        images/criminal_camp.png
        images/fort1.png
        images/village_level_1.png
        images/village_level_2.png
        images/village_level_3.png
        images/village_level_4.png
        images/village_level_5.png
        images/vintage-hand-drawn-tents-icons-bundle-simple-line-art-graphics-camping-houses-symbols-stock-vector-isolated-adventure-elemens-190468685.jpg
        node_modules/node-gyp/gyp/data/win/large-pdb-shim.cc
        node_modules/node-gyp/src/win_delay_load_hook.cc
        "saves/json (1).json"
        "saves/json (2).json"
        saves/json.json
        saves/saves_repairing_1.json
        src/graph/edge.js
        src/graph/epoch.js
        src/graph/graph.js
        src/graph/vertice.js
        src/map/map_cell.js
        src/map/map_logic.js
        src/map/map_terrain_generation.js
        src/drawing.js
        src/drawing_logic.js
        src/initialVertices.js
        src/save_and_load_logic.js
        tests/edge_test.js
        tests/vertice_test.js
        index.html
        main.js
        package-lock.json
        package.json)
